# modpilot

./: CHANGELOG.md  Cargo.toml  FEEDBACK.md  README.md
.claude/skills/uniube-ava-monitor/: SKILL.md
.claude/skills/uniube-whatsapp-monitor/: SKILL.md
manifests/: dishonored.toml  games.toml  gtav.toml  hitman3.toml
scripts/: submit_feedback.sh
src/: config.rs  i18n.rs  main.rs  menu.rs
src/app/: mod.rs
src/games/: mod.rs
src/manifests/: mod.rs
src/modding_apps/: mod.rs
src/nexus/: mod.rs
src/wine/: mod.rs
