[package]
name = "gamepilot"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = "0.9"
gtk = { version = "0.9", package = "gtk4" }
steamlocate = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "1.1.2"
