[package]
name = "gamepilot"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = "0.18"
glib = "0.18"
gio = "0.18"
steamlocate = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
async-channel = "2.5.0"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
dirs = "6.0.0"
